added column formatting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -26,13 +26,75 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <div id="currentDay" class="lead"></div>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          9AM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          10AM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          11AM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          12PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          1PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          2PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          3PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          4PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
+      <div class="row no-gutters">
+        <div class="text-right col">
+          5PM
+        </div>
+        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
+        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
