--- a/index.html
+++ b/index.html
@@ -28,70 +28,97 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <div id="currentDay" class="lead"></div>
     </header>
-    <div class="container">
-      <div class="row no-gutters">
-        <div class="text-right col">
-          9AM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+    <div id="hour8" class="row time-block">
+      <div class="col-md-1 hour">
+          8 AM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          10AM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour9" class="row time-block">
+      <div class="col-md-1 hour">
+          9 AM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          11AM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour10" class="row time-block">
+      <div class="col-md-1 hour">
+          10 AM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          12PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour10=1" class="row time-block">
+      <div class="col-md-1 hour">
+          11 AM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          1PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour12" class="row time-block">
+      <div class="col-md-1 hour">
+          12 PM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          2PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour13" class="row time-block">
+      <div class="col-md-1 hour">
+          1 PM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          3PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour14" class="row time-block">
+      <div class="col-md-1 hour">
+          2 PM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          4PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour15" class="row time-block">
+      <div class="col-md-1 hour">
+          3 PM
       </div>
-      <div class="row no-gutters">
-        <div class="text-right col">
-          5PM
-        </div>
-        <input type="text" class="col-10 form-control form-control-lg bg-info" id="tasks" placeholder="Enter A Task">
-        <button class="col-12 col-lg-1 fas fa-lock" type="submit"></button>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour16" class="row time-block">
+      <div class="col-md-1 hour">
+          4 PM
       </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+<div id="hour17" class="row time-block">
+      <div class="col-md-1 hour">
+          5 PM
+      </div>
+      <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+</div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
