--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -25,100 +14,99 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
       <div id="currentDay" class="lead"></div>
     </header>
+  
+    <!--Build Timeblock by Hour-->
     <div id="hour8" class="row time-block">
-      <div class="col-md-1 hour">
+      <div class="col-2 hour">
           8 AM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour9" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour9" class="row time-block">
+      <div class="col-2 hour">
           9 AM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour10" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour10" class="row time-block">
+      <div class="col-2 hour">
           10 AM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour10=1" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour10=1" class="row time-block">
+      <div class="col-2 hour">
           11 AM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour12" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour12" class="row time-block">
+      <div class="col-2 hour">
           12 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour13" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour13" class="row time-block">
+      <div class="col-2 hour">
           1 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour14" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour14" class="row time-block">
+      <div class="col-2 hour">
           2 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour15" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour15" class="row time-block">
+      <div class="col-2 hour">
           3 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour16" class="row time-block">
-      <div class="col-md-1 hour">
+    <div id="hour16" class="row time-block">
+      <div class="col-2 hour">
           4 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
-<div id="hour17" class="row time-block">
-      <div class="col-md-1 hour">
+   <div id="hour17" class="row time-block">
+      <div class="col-2 hour">
           5 PM
       </div>
-      <textarea class="col-md-10 description">
+      <textarea class="col-9 description">
       </textarea>
-      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-  </div>
-
-</div>
+      <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
