--- a/index.html
+++ b/index.html
@@ -18,92 +18,92 @@
     </header>
   
     <!--Build Timeblock by Hour-->
-    <div id="hour8" class="row time-block">
+    <div id="8" class="row time-block">
       <div class="col-2 hour">
           8 AM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour9" class="row time-block">
+    <div id="9" class="row time-block">
       <div class="col-2 hour">
           9 AM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour10" class="row time-block">
+    <div id="10" class="row time-block">
       <div class="col-2 hour">
           10 AM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour10=1" class="row time-block">
+    <div id="11" class="row time-block">
       <div class="col-2 hour">
           11 AM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour12" class="row time-block">
+    <div id="12" class="row time-block">
       <div class="col-2 hour">
           12 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour13" class="row time-block">
+    <div id="13" class="row time-block">
       <div class="col-2 hour">
           1 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour14" class="row time-block">
+    <div id="14" class="row time-block">
       <div class="col-2 hour">
           2 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour15" class="row time-block">
+    <div id="15" class="row time-block">
       <div class="col-2 hour">
           3 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-    <div id="hour16" class="row time-block">
+    <div id="16" class="row time-block">
       <div class="col-2 hour">
           4 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
 
-   <div id="hour17" class="row time-block">
+   <div id="17" class="row time-block">
       <div class="col-2 hour">
           5 PM
       </div>
-      <textarea class="col-9 description">
+      <textarea class="col-9 task">
       </textarea>
       <button class="btn saveBtn col-1"><a class="fas fa-save"></a></button>
     </div>
