--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1>Work Day Scheduler</h1>
       <div id="currentDay" class="lead"></div>
     </header>
   
